# Low-Level-Chess

./: .gitignore  BuildRun.sh  CMakeLists.txt  Makefile  README.md  Run.sh  chess.c  func.c  func.h  game.c
game-logic/header/: func.h
game-logic/source/: func.c
gameLogic/header/: board.h  rules.h
gameLogic/source/: board.c  rules.c
util/header/: util.h
util/source/: util.c
